2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Remove accelerators for the window resize
	menu items, they were causing problems with the latest GTK+
	whenever the sidebar was used (Closes: #557447)

2008-10-22  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c (seek_slider_pressed_cb): Don't show seeking to
	label when we can direct seek (Closes: #338390)

2008-10-21  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
	Fix playing property being wrong when an error occurs
	(Closes: #556039)

2008-10-14  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_best_image): Revert last patch,
	we were already checking for GST_TAG_PREVIEW_IMAGE

2008-10-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_get_best_image): Patch from John Millikin
	<jmillikin@gmail.com> to also look for the GST_TAG_PREVIEW_IMAGE
	tag when trying to get audio file covers (Closes: #556074)

2008-10-08  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c (relative_uri_remove_query),
	(resolve_uri):
	* browser-plugin/totemPlugin.cpp:
	* browser-plugin/totemPlugin.h: Backport fixes from #555417

============ Version 2.24.2

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 2.24.2

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/youtube/youtube.py: Patch from Edward Hervey
	<bilboed@gmail.com> to fix the threading in the youtube plugin
	(Closes: #548879)

2008-10-07  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-python-module.c
	(totem_python_module_init_python), (totem_python_module_load):
	* src/plugins/totem-python-plugin.c (call_python_method),
	(check_py_object_is_gtk_widget), (totem_python_object_init),
	(totem_python_object_get_type): Patch from Tim-Philipp Müller