@@ -1855,6 +1855,13 @@ property_notify_cb_seekable (BaconVideoWidget *bvw, GParamSpec *spec, Totem *tot
 gboolean
 seek_slider_pressed_cb (GtkWidget *widget, GdkEventButton *event, Totem *totem)
 {
+	/* HACK: we want the behaviour you get with the middle button, so we
+	 * mangle the event.  clicking with other buttons moves the slider in
+	 * step increments, clicking with the middle button moves the slider to
+	 * the location of the click.
+	 */
+	event->button = 2;
+
 	totem->seek_lock = TRUE;
 	if (bacon_video_widget_can_direct_seek (totem->bvw) == FALSE) {
 		totem_statusbar_set_seeking (TOTEM_STATUSBAR (totem->statusbar), TRUE);
@@ -1890,6 +1897,9 @@ seek_slider_released_cb (GtkWidget *widget, GdkEventButton *event, Totem *totem)
 {
 	GtkAdjustment *adj;
 	gdouble val;
+
+	/* HACK: see seek_slider_pressed_cb */
+	event->button = 2;
 
 	/* set to FALSE here to avoid triggering a final seek when
 	 * syncing the adjustments while being in direct seek mode */
